<resources>
    <string name="app_name">Dinda Jaya App</string>
    <string name="app_ver">v1.11.20210111</string>
    <string name="title_activity_home">Home</string>
    <string name="app_home">Beranda</string>
    <string name="app_daftar">Daftar</string>
    <string name="app_menu">Menu</string>
    <string name="login_alert">*Hanya pemilik konveksi yang dapat melakukan login.</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_backup">Ekspor Data</string>
    <string name="menu_tentang">Tentang</string>
    <string name="menu_setCrit">Ubah Prioritas</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="app_info">Aplikasi ini dibuat untuk membantu mempermudah pengelolaan pesanan di Dinda Jaya Tailor.</string>
    <string name="deve_info">dibuat oleh:</string>
    <string name="deve_name">Ahmad Firdaus A.</string>
    <string name="deve_corp">Sistem Informasi | FILKOM UNEJ</string>
    <string name="deve_mail">162410101054@students.unej.ac.id</string>
    <string name="deve_phone">081331017597</string>
    <string name="deve_alt">https://bit.ly/Rex1054</string>
    <string name="masuk">Masuk</string>
    <string name="kembali">Kembali</string>
    <string name="ubahpin">Ubah PIN</string>
    <string name="daftar_text">Daftar Pesanan</string>
    <string name="title_activity_asd">asd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_pesanan">Detail Pesanan</string>
    <string name="batal">Batal</string>
</resources>
