<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo_full"
            android:layout_marginBottom="30dp"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_info"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_name"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_corp"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_mail"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_phone"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <TextView
            android:id="@+id/dev_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deve_alt"
            android:textAlignment="center"
            android:textSize="10sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginBottom="50dp"></TextView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kembali"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:id="@+id/kembali_bt"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ubahpin"
            android:textSize="16sp"
            android:background="@color/colorPrimary"
            android:id="@+id/chpin_bt"
            android:layout_marginTop="15dp"></Button>

    </LinearLayout>

</RelativeLayout>