<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="bottom">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/logo_full"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:textAlignment="center"
            android:layout_marginBottom="50dp"
            android:textColor="@color/colorPrimaryDark"></TextView>

        <Button
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_tentang"
            android:background="@color/colorAccent"
            android:textAlignment="textStart"
            android:paddingLeft="20dp"></Button>

<!--        <Button-->
<!--            android:id="@+id/backup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/menu_backup"-->
<!--            android:background="@color/colorAccent"-->
<!--            android:textAlignment="textStart"-->
<!--            android:paddingLeft="20dp"></Button>-->

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logout"
            android:background="@color/colorAccent"
            android:textAlignment="textStart"
            android:paddingLeft="20dp"></Button>

    </LinearLayout>

</RelativeLayout>